--- a/ExchangeRates/ExchangeRates.csproj
+++ b/ExchangeRates/ExchangeRates.csproj
@@ -22,6 +22,7 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.6"/>
         <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc2" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.0-preview.2.24128.5" />
     </ItemGroup>
 
